fix department show content overflow

--- a/src/components/TeamProfile/styles/TeamProfilesEntryForm.less
+++ b/src/components/TeamProfile/styles/TeamProfilesEntryForm.less
@@ -46,7 +46,9 @@
     }
     &.activeDepartment {
       :global(.function-type-placeholder) {
+        overflow: hidden;
         color: @primary-color-dark;
+        text-overflow: ellipsis;
       }
     }
   }
